--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-    <script type="module" src="https://miichipost.com/viewport/3DModelWebAR2/main.js"></script>
+    <script type="module" src="https://solraczo.github.io/solarandroid/main.js"></script>
 </body>
 </html>
